@@ -7,3 +7,5 @@
 	* for replies to threads with no root post insert a placeholder
 	* all thumbnails are jpegs
 	* use ffmpegthumbnailer for thumbnails except for gif which uses mogrify
+	* added ``srndv2 tool`` option for srnd.go
+	* for srndv2 tool added rethumb tool to regenerate all thumbnails
